# plugin-kitty

./: .gitignore  Cargo.toml  Makefile  README.md  plugin.toml  qol-config.toml  qol-runtime.toml
docs/adr/: KITTY-1-build-plugin-kitty-terminal-lifecycle.md
src/: dispatcher.rs  kitty.rs  lib.rs  lifecycle.rs  main.rs  resolver.rs
src/platform/: linux.rs  macos.rs  mod.rs
src/registry/: mod.rs
tests/: dispatcher_pane_claim_structural.rs  kitty_ipc_adapter_structural.rs  registry_load_structural.rs  resolver_template_id_structural.rs
