[package]
name = "plugin-kitty"
version = "0.1.0"
edition = "2021"
description = "Terminal lifecycle plugin for qol-tray: kitty IPC, workspace lifecycle, and template-gated restore"
license = "PolyForm-Noncommercial-1.0.0"

[dependencies]
cap-std = "3"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
# Pinned to the API-1 feature branch carrying RestoreClaim / PaneSnapshot /
# RestoreRuleCapability. Follow-up unpin commit once API-1 merges to main.
qol-plugin-api = { git = "https://github.com/qol-tools/qol-plugin-api", branch = "api-1-define-restore-rule-contract-types-and-capabilitie", default-features = false }
# Pinned to the RUNTIME-1 feature branch carrying the PaneField wire
# vocabulary that the template registry maps to. Follow-up unpin commit
# once RUNTIME-1 merges to main.
qol-runtime = { git = "https://github.com/qol-tools/qol-runtime", branch = "runtime-1-af-unix-broker-with-peer-cred-auth-and-pull-pane-f" }

[target.'cfg(target_os = "macos")'.dependencies]
# Apple codesign verification of the resolved kitty binary. Linux uses
# package-manager integrity instead and does not pull this in.
apple-codesign = "0.29"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
