[package]
name = "plugin-kitty"
version = "0.1.0"
edition = "2021"
description = "Terminal lifecycle plugin for qol-tray: kitty IPC, workspace lifecycle, and template-gated restore"
license = "PolyForm-Noncommercial-1.0.0"

[dependencies]
anyhow = "1"
cap-std = "3"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
toml = "0.8"
qol-plugin-api = { git = "https://github.com/qol-tools/qol-plugin-api", default-features = false }
qol-runtime = { git = "https://github.com/qol-tools/qol-runtime" }

[target.'cfg(target_os = "macos")'.dependencies]
# Apple codesign verification of the resolved kitty binary. Linux uses
# package-manager integrity instead and does not pull this in.
apple-codesign = "0.29"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
